<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_NewVideoTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:hint="@string/txt_predica_titulo"
            android:inputType="text|textCapSentences" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_NewVideoDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:hint="@string/txt_predica_descripcion"
            android:inputType="text|textCapSentences" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_NewVideoDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:hint="@string/txt_predica_fecha"
            android:inputType="date"
            android:focusable="false"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_NewVideoLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:hint="@string/txt_predica_link"
            android:inputType="textUri"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        android:gravity="center">

        <Button
            android:id="@+id/btn_Cancel"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_predicas_btn_cancelar"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:layout_margin="10dp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_Save"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_predicas_btn_agregar"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:layout_margin="10dp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>