<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@color/colorAccent">

                <ImageView
                    android:id="@+id/loginConfraLogo"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:contentDescription="@string/img_content_description" />

            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_alignParentTop="true"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="200dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="36dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_ingresa_datos"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/TitleTextSize"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txt_user_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/txt_login_correo"
                            android:inputType="textEmailAddress"
                            android:textSize="@dimen/SubtitleTextSize"
                            android:drawableLeft="@drawable/ic_email"
                            android:drawableStart="@drawable/ic_email" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txt_pass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:hint="@string/txt_login_password"
                            android:inputType="textPassword"
                            android:textSize="@dimen/SubtitleTextSize"
                            android:drawableLeft="@drawable/ic_password"
                            android:drawableStart="@drawable/ic_password" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="380dp"
                android:paddingHorizontal="36dp"
                android:background="@drawable/rounded_btn"
                android:text="@string/txt_btn_login"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/TextNormalSize" />

            <TextView
                android:id="@+id/txt_resetPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_login"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                android:clickable="true"
                android:textColor="#000"
                android:text="@string/txt_btn_reset_pass"
                android:focusable="true" />

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_login"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="36dp"
                android:paddingHorizontal="36dp"
                android:background="@drawable/rounded_btn_gray"
                android:text="@string/txt_btn_signup"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/TextNormalSize" />

        </RelativeLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>